--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,13 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.product img {
+  max-width: 700px;
+  max-height: 300px;
+}
+
+.productList {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
