--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,22 @@ body {
 }
 
 .product img {
-  max-width: 700px;
-  max-height: 300px;
+  max-width: 100%;
+  min-height: 170px;
+  max-height: 170px;
 }
 
 .productList {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px 20px;
+}
+
+.productInfo {
+  background-color: rgba(146, 146, 196, 0.459);
+  border-radius: 15px;
+  /* display: flex; */
+  margin: 0 auto;
+  max-width: 20%;
+  padding: 5px 10px;
 }
