--- a/src/Pages/cartPage.css
+++ b/src/Pages/cartPage.css
@@ -5,15 +5,21 @@
   border-radius: 5px;
   border: 1px solid #ccc;
   padding: 10px;
+  justify-content: space-between;
   /* margin: 0 auto; */
   /* max-width: 1000px; */
+  /* margin: 25px; */
 }
 
 .cartItem {
   display: flex;
   /* flex-direction: column; */
   align-items: center;
-  /* justify-content: space-between; */
+  justify-content: space-between;
+  width: 50vw;
+  border-bottom: 1px solid rgb(97, 110, 115);
+  /* padding: 30px 10px; */
+  height: 20vh;
 }
 .cartItem .itemImg {
   width: 200px;
@@ -29,9 +35,11 @@
   background-color: #fff;
 
   border: 1px solid #ccc;
+  width: 30%;
 }
 .container {
   display: flex;
-
+  gap: 20px;
   justify-content: center;
+  margin: 50px;
 }
