--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
+  /* font-size: calc(0.4em + 1vw); */
 }
 .product {
   background-color: rgb(216, 161, 79);
@@ -17,7 +18,7 @@ body {
 }
 .product img {
   max-width: 100%;
-  min-height: 169px;
+  height: 114px;
 }
 
 .productList {
