--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -44,9 +44,14 @@
 
 .mainNav span {
   display: inline-block;
-  width: 25px;
+  width: 35px;
   height: 25px;
   border-radius: 30%;
   background-color: rgb(255, 183, 0);
   text-align: center;
+  position: absolute;
+}
+.poi {
+  position: relative;
+  background-color: red;
 }
