--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -42,6 +42,10 @@
   border-bottom: 3px solid red;
 }
 
+.poi {
+  background-color: red;
+  z-index: 1;
+}
 .mainNav span {
   display: inline-block;
   width: 35px;
@@ -49,9 +53,5 @@
   border-radius: 30%;
   background-color: rgb(255, 183, 0);
   text-align: center;
-  position: absolute;
-}
-.poi {
-  position: relative;
-  background-color: red;
+  z-index: 0;
 }
